--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "simple-encryptor": "^4.0.0",
+    "typescript": "5.0.4",
+    "react-scripts": "5.0.1"
   }
 }
